Retomando el proyecto

--- a/filter.html
+++ b/filter.html
@@ -237,15 +237,19 @@
 
             <div id="btns_FMob">
                 <button id="applyFilters" class="closeFilter hide_desk">APPLY <span class="filtersCount"></span></button>
-                <button class="clearFilter hide_desk">CLEAR FILTER</button>
+                <button class="clearFilter clearBtn hide_desk">CLEAR FILTER</button>
             </div>
         </div>
           
         <div id="containerShop" class="col_100">
             <div id="tagsBar" class="a_i_center">
-                <button class="clearFilter">CLEAR FILTER</button> 
+                <button class="clearFilter clearBtn">CLEAR FILTER</button> 
                 <div id="boxTags" class="display_flex">
                 </div>
+            </div>
+
+            <div id="clearSearchBar" class=" display_flex a_i_center">
+                <button id="clearSearch" class="clearBtn">CLEAR SEARCH</button> 
             </div>
             
             <!--<div class="p_relative">-->
@@ -255,4 +259,4 @@
             <!--</div>-->
         </div>
     </div>
-</div>  
+</div> 
